ui fix for cards on small screens

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -217,6 +217,7 @@ md-tooltip {
 		.description {
 			overflow: hidden;
 			height: 20px;
+            max-width: 90%;
 			float: left;
 		}
 
